# SteamLibraryStats

./: Cargo.toml  README.md
src/: main.rs
static/: index.html
static/css/: main.css
