[package]
name = "steam-library-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Using ureq instead of reqwest to avoid OpenSSL dependency issues
ureq = { version = "2.8.0", features = ["json"] }
